<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">SmartHMA</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action_pref3">Preferences 1</string>
    <string name="action_pref2">Preferences 2</string>
    <string name="action_pref1">Preferences 3</string>
    <string name="action_clear_all_settings">Clear Settings</string>
    <string name="specific_collection_does_not_exist">Specific collection does not exist. Please try later.</string>
    <string name="download_explain_doc_complete">Download explain document complete.</string>
    <string name="download_failed">Download failed</string>
    <string name="loading_please_wait">Data is loading \nPlease wait &#8230; </string>
    <string name="content_picture">Collection picture</string>
    <string name="search_hint">Search EO data</string>
    <string name="action_search">Search</string>
    <string name="failure_fragment_text">Hello blank fragment</string>
    <string name="first_line_desc">First line desc</string>
    <string name="second_line_desc">Second line desc</string>
    <string name="right_side_desc">Right side desc</string>
    <string name="desc">desc</string>
    <string name="btn_offline_reading">Save for later</string>
    <string name="btn_mark_unread">Mark unread</string>
    <string name="btn_refresh">Refresh</string>
    <string name="ok_">"OK!!! "</string>
    <string name="nothing_to_display_please_search_again_">Nothing to display. Please search again.</string>
    <string name="search_product">Search Product</string>
    <string name="show_metadata">Metadata</string>
    <string name="show_map">Show Map</string>
    <string name="Share">Share</string>
    <string name="products_search_area">Products search area</string>
    <string name="sw_">SW: </string>
    <string name="ne_">NE: </string>
    <string name="search_products">Search Products</string>
    <string name="dataset_series_search_results">Dataset Series Search Results</string>
    <string name="quicklook">Quicklook</string>
    <string name="browse_products">Browse Products</string>
    <string name="esa_missions">ESA Missions</string>
    <string name="esa_online">ESA Online</string>
    <string name="title_article_list">ESA EO News SmartHMA Reader</string>
    <string name="more">More >></string>
    <string name="smarthma">SmartHMA</string>
    <string name="fedeo_eo_data_series_search_engine">with ESA/FedEO Search Engine</string>
    <string name="basic_settings">Basic Settings</string>
    <string name="advance_settings">Advance Settings</string>
    <string name="basic_search_settings">Basic Search Settings</string>
    <string name="search_area">Search Area</string>
    <string name="time_period">Time Period</string>
    <string name="from_">"From: "</string>
    <string name="to_">"To:   "</string>
    <string name="date_time">Date/Time</string>
    <string name="time_set">Set time</string>
    <string name="cancel">Cancel</string>
    <string name="catalogue">Catalogue</string>
    <string name="eo_catalogue_list_title">EO Catalogues</string>
    <string name="fedeo">FEDEO</string>
    <string name="zero">0</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_response_error">Response Error</string>
    <string name="please_correct_your_query_">\n\nPlease go back and correct your query.</string>
    <string name="_">" - "</string>
    <string name="_first">&lt;&lt; first</string>
    <string name="search_term_">"SEARCH TERM "</string>
    <string name="collection_">"COLLECTION "</string>
    <string name="time_start_">"TIME START "</string>
    <string name="time_end_">"TIME END "</string>
    <string name="area_bounds_">"AREA BOUNDS "</string>
    <string name="updated_">"UPDATED "</string>
    <string name="total_results_">"TOTAL RESULTS "</string>
    <string name="_prev">&lt; prev</string>
    <string name="reload">reload</string>
    <string name="next_">next ></string>
    <string name="last_">last >></string>
    <string name="items_from">Items from</string>
    <string name="to">to</string>
    <string name="collection_id">Collection ID: </string>
    <string name="show_products">Show Products</string>
    <string name="activity_name_collections_definition">Collections Definition</string>
    <string name="activity_name_collections_browser">Collections Browser</string>
    <string name="activity_name_products_browser">Products Browser</string>
    <string name="activity_name_search_eo_data">Search EO Data</string>
    <string name="activity_name_search_collections_results">Searched Collections</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="actionbar_share">Share</string>
    <string name="app_id">825236790862337</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted on facebook \'%1$s\'.\nwith fb ID: %2$s</string>
    <string name="error">Error</string>
    <string name="hello_user">You are logged as\n%1$s</string>
    <string name="share_quicklook">Share Quicklook</string>
    <string name="quicklook_img_desc">Quicklook Image</string>
    <string name="search_eo_data">Search EO Data</string>
    <string name="esa_mission_item">ESA MISSION ITEM</string>

</resources>