<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF" >

    <LinearLayout
        android:id="@+id/dataseried_detail_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dataseries_name"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:textColor="#38b4ea"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:context="pl.wasat.smarthma.ui.frags.browse.DataSeriesDetailFragment" />

        <TextView
            android:id="@+id/dataseries_dates"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="2dp"
            android:textColor="#A8A8A8"
            android:textSize="12sp"
            android:textStyle="italic"
            tools:context="pl.wasat.smarthma.ui.frags.browse.DataSeriesDetailFragment" />

        <WebView
            android:id="@+id/dataseries_detail"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight = "200dp"
            android:padding="16dp"
            android:textSize="16sp"
            tools:context="pl.wasat.smarthma.ui.frags.browse.DataSeriesDetailFragment" />

        <LinearLayout
            android:id="@+id/dataseries_detail_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp" >

            <Button
                android:id="@+id/ds_detail_button_search_product"
                style="@style/styleBtnDetails"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:text="@string/search_product" />

            <Button
                android:id="@+id/ds_detail_button_show_meta"
                style="@style/styleBtnDetails"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:text="@string/show_metadata" />

            <Button
                android:id="@+id/ds_detail_button_show_map"
                style="@style/styleBtnDetails"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:text="@string/show_map" />

            <Button
                android:id="@+id/ds_detail_button_download"
                style="@style/styleBtnDetails"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:enabled="false"
                android:text="@string/download" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>