<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coll_item_right_fragment_id"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:id="@+id/coll_item_right_fragment_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/coll_item_right_frag_tv_coll_name"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:textColor="#38b4ea"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/coll_item_right_frag_tv_coll_dates"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="2dp"
            android:textColor="#A8A8A8"
            android:textSize="12sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/coll_item_right_frag_tv_area"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="2dp"
            android:text="@string/products_search_area"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/coll_item_right_frag_layout_area_sw"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/coll_item_right_frag_tv_area_sw_title"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="2dp"
                android:text="@string/sw_"
                android:textColor="#A9A9A9"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/coll_item_right_frag_tv_area_sw_lat"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="2dp"
                android:textColor="#A9A9A9"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/coll_item_right_frag_tv_area_sw_lon"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="2dp"
                android:textColor="#A9A9A9"
                android:textSize="14sp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/coll_item_right_frag_layout_area_ne"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/coll_item_right_frag_tv_area_ne_title"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="2dp"
                android:text="@string/ne_"
                android:textColor="#A9A9A9"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/coll_item_right_frag_tv_area_ne_lat"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="2dp"
                android:textColor="#A9A9A9"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/coll_item_right_frag_tv_area_ne_lon"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="2dp"
                android:textColor="#A9A9A9"
                android:textSize="14sp"
                android:textStyle="normal" />
        </LinearLayout>

        <Button
            android:id="@+id/coll_item_right_frag_button_search_prod"
            style="@style/button_details"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:text="@string/search_products" />
    </LinearLayout>

</ScrollView>