<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/metadata_fragment_scrollview_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:id="@+id/metadata_fragment_layout_main_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/metadata_frag_tv_prod_name"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:textColor="#38b4ea"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/metadata_frag_tv_prod_dates"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="2dp"
            android:textColor="#A8A8A8"
            android:textSize="12sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/metadata_frag_tv_header_1"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="2dp"
            android:text="@string/products_search_area"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/metadata_frag_layout_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/metadata_frag_tv_1_title"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="2dp"
                android:text="@string/sw_"
                android:textColor="#A9A9A9"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/metadata_frag_tv_1_1"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="2dp"
                android:textColor="#A9A9A9"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/metadata_frag_tv_1_2"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="2dp"
                android:textColor="#A9A9A9"
                android:textSize="14sp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/metadata_frag_layout_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/metadata_frag_tv_2_title"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="2dp"
                android:text="@string/ne_"
                android:textColor="#A9A9A9"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/metadata_frag_tv_2_1"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="2dp"
                android:textColor="#A9A9A9"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/metadata_frag_tv_2_2"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="2dp"
                android:textColor="#A9A9A9"
                android:textSize="14sp"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>